--- a/dashboard.html
+++ b/dashboard.html
@@ -806,18 +806,27 @@
                         let statusBadge = '';
 
                         if (result) {
-                            // Đã làm -> Hiện nút Xem lời giải (Màu Xanh Lá)
-                            statusBadge = `<span class="text-xs font-bold text-green-600 bg-green-50 px-2 py-1 rounded border border-green-100">Điểm: ${result.score}</span>`;
+                            // Đã làm -> Hiện 2 nút: Làm lại & Xem lời giải
+                            statusBadge = `<span class="text-xs font-bold text-green-600 bg-green-50 px-2 py-1 rounded border border-green-100">Điểm cao nhất: ${result.score}</span>`;
+                            
+                            // Kiểm tra số lượt làm bài còn lại (nếu có giới hạn)
+                            // Nếu muốn cho làm lại vô hạn thì luôn hiện nút Làm lại
+                            
                             actionBtn = `
-                                <button onclick="window.location.href='exam.html?id=${doc.id}&mode=review'" class="w-full py-2 bg-green-50 text-green-700 font-bold rounded-lg border border-green-200 hover:bg-green-100 hover:text-green-800 transition-colors flex items-center justify-center gap-2">
-                                    <i class="fa-solid fa-eye"></i> Xem lời giải
-                                </button>`;
+                                <div class="flex gap-2 mt-2">
+                                    <button onclick="window.location.href='exam.html?id=${doc.id}'" class="flex-1 py-2 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700 transition-colors shadow-sm text-sm">
+                                        Làm lại
+                                    </button>
+                                    <button onclick="window.location.href='exam.html?id=${doc.id}&mode=review'" class="flex-1 py-2 bg-white text-blue-600 font-bold rounded-lg border border-blue-200 hover:bg-blue-50 transition-colors text-sm">
+                                        Xem lời giải
+                                    </button>
+                                </div>`;
                         } else {
-                            // Chưa làm -> Hiện nút Làm bài (Màu Tím)
+                            // Chưa làm -> Hiện 1 nút Làm bài
                             statusBadge = `<span class="text-xs font-bold text-orange-500 bg-orange-50 px-2 py-1 rounded border border-orange-100">Chưa làm</span>`;
                             actionBtn = `
-                                <button onclick="window.location.href='exam.html?id=${doc.id}'" class="w-full py-2 bg-purple-50 text-purple-600 font-bold rounded-lg border border-purple-100 group-hover:bg-purple-600 group-hover:text-white transition-colors">
-                                    Làm bài ngay
+                                <button onclick="window.location.href='exam.html?id=${doc.id}'" class="w-full py-2 bg-purple-600 text-white font-bold rounded-lg shadow-md hover:bg-purple-700 transition-colors mt-2">
+                                    Bắt đầu làm bài
                                 </button>`;
                         }
 
